--- a/PROD/CONF/FT_GROSS_ADD_COMPETITIORS/load-spark-ft-operator-acct-activity.conf
+++ b/PROD/CONF/FT_GROSS_ADD_COMPETITIORS/load-spark-ft-operator-acct-activity.conf
@@ -25,19 +25,19 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=7,'OK','NOK')
-
+select
+    if(count(*)=8,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from MON.SPARK_FT_OPERATOR_ACCT_ACTIVITY where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
+    and datecode in (select distinct event_date from MON.SPARK_FT_OPERATOR_ACCT_ACTIVITY where event_date between date_sub(current_date, 7) and date_sub(current_date, 0))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from MON.SPARK_FT_OPERATOR_ACCT_ACTIVITY where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
+    and datecode in (select distinct event_date from MON.SPARK_FT_OPERATOR_ACCT_ACTIVITY where event_date between date_sub(current_date, 7) and date_sub(current_date, 0))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
