--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-a-gprs-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY/load-kpi-spark-ft-a-gprs-activity.conf
@@ -23,8 +23,8 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=7,'OK','NOK')
-
+select
+    if(count(*)=8,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
     and datecode in (select distinct transaction_date from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY where source_data = 'FT_A_GPRS_ACTIVITY' and transaction_date between date_sub(current_date, 7) and date_sub(current_date, 0))
