--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-subscription.conf
@@ -21,8 +21,8 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=7,'OK','NOK')
-
+select
+    if(count(*)=8,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
     and datecode in (select distinct transaction_date from agg.spark_ft_a_subscription where transaction_date between date_sub(current_date, 7) and date_sub(current_date, 0))
