--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -20,7 +20,7 @@ env = "prod"
 crontasks +=
   {
     instanceId = "SQ_EXPORT_FT_AG_INTERCO",
-    cron = "0 40 */2 * * ?",
+    cron = "0 40 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -105,7 +105,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_A_DATA_TRANSFER",
-    cron = "0 50 */2 * * ?",
+    cron = "0 50 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-fta-data-transfer.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -262,7 +262,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART",
-    cron = "0 45 */2 * * ?",
+    cron = "0 45 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -279,7 +279,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART_MONTH",
-    cron = "0 5 */2 1-5 * ?",
+    cron = "0 5 */11-5 * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -295,7 +295,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_CLIENT_LAST_SITE_DAY",
-    cron = "0 10 */2 * * ?",
+    cron = "0 10 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-client-last-site-day.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -312,7 +312,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_CONTRACT_SNAPSHOT",
-    cron = "0 15 */2 * * ?",
+    cron = "0 15 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-contract-snapshot.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -333,7 +333,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_A_SUBSCRIBER_SUMMARY",
-    cron = "0 35 */2 * * ?",
+    cron = "0 35 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-subscriber-summary.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -349,7 +349,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_COMMERCIAL_SUBSCRIB_SUMMARY",
-    cron = "0 35 */2 * * ?",
+    cron = "0 35 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-commercial-subscrib-summary.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -365,8 +365,38 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_GROUP_SUBSCRIBER_SUMMARY",
-    cron = "0 35 */2 * * ?",
+    cron = "0 35 */1* * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-group-subscriber-summary.conf",
+    taskType = "SQOOP",
+     taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_GLOBAL_ATV_MKT",
+    cron = "0 35 */1* * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily-mkt.conf",
+    taskType = "SQOOP",
+     taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_REFILL_SLICE_MKT",
+    cron = "0 35 */1* * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill-slice-mkt.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
     taskLauncher = ${SQOOP_LAUNCHER}
