--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill-slice-mkt.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill-slice-mkt.conf
@@ -21,11 +21,11 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.FT_GLOBAL_ACTIVITY_DAILY_MKT WHERE TRANSACTION_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+(SELECT COUNT(*) NBR FROM MON.FT_REFILL_SLICE_MKT WHERE TRANSACTION_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR >=1, 'OK', 'NOK') FROM
-(SELECT COUNT(DISTINCT SOURCE_TABLE) NBR  FROM AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(DISTINCT SOURCE_TABLE) NBR  FROM AGG.SPARK_FT_REFILL_SLICE_MKT WHERE TRANSACTION_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.95.20)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
