--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-prpd-eqt.conf
@@ -34,16 +34,15 @@ flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
 select  if(count(*)=35,'OK','NOK')
-
 from dim.dt_dates where datecode between date_sub(current_date, 35) and date_sub(current_date, 1)
-    and datecode in (select distinct EVENT_DATE from MON.SPARK_FT_PRPD_EQT where EVENT_DAY between date_sub(current_date, 35) and date_sub(current_date, 1))
+    and datecode in (select distinct EVENT_DAY from MON.SPARK_FT_PRPD_EQT where EVENT_DAY between date_sub(current_date, 35) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates where datecode between date_sub(current_date, 35) and date_sub(current_date, 1)
-    and datecode in (select distinct EVENT_DATE from MON.SPARK_FT_PRPD_EQT where EVENT_DAY between date_sub(current_date, 35) and date_sub(current_date, 1))
+    and datecode in (select distinct EVENT_DAY from MON.SPARK_FT_PRPD_EQT where EVENT_DAY between date_sub(current_date, 35) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
