--- a/PROD/CONF/BDI/load-spark-ft-bdi-ameliore.conf
+++ b/PROD/CONF/BDI/load-spark-ft-bdi-ameliore.conf
@@ -28,7 +28,7 @@ flux.slice-state-query="""
 select  if(count(*)=25,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 25) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from mon.spark_ft_bdi where event_date between date_sub(current_date, 25) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_BDI_AMELIORE where event_date between date_sub(current_date, 25) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -36,7 +36,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 25) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from mon.spark_ft_bdi where event_date between date_sub(current_date, 25) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from MON.SPARK_FT_BDI_AMELIORE where event_date between date_sub(current_date, 25) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
