--- a/PROD/CONF/SQOOP/sqoop-export-ft-conso-simbox.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-conso-simbox.conf
@@ -1,19 +1,19 @@
-flux.yarn.queue = "PROD"
+flux.yarn.queue = "compute"
 flux.log-level = "ERROR"
 
-flux.name = "SQ_EXPORT_SPARK_FT_A_RAF_SUBSCRIPTION_DD"
+flux.name = "SQ_EXPORT_CONSO_SIMBOX"
 
 flux.type = "EXPORT"
 
 flux.has-date-processing = true
 
-flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -40
+flux.slice-value-type = "MONTHLY"
+flux.slice-begin-value = -3
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-date-format = "yyyy-MM-dd"
+flux.slice-date-format = "yyyy-MM"
 
 flux.rdms.has-pre-queries = true
 
@@ -21,11 +21,11 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.FT_A_RAF_SUBSCRIPTION_DD WHERE event_date BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+(SELECT COUNT(*) NBR FROM MON.FT_CONSO_SIMBOX WHERE event_date BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM AGG.SPARK_FT_A_RAF_SUBSCRIPTION_DD WHERE event_date='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM MON.SPARK_FT_CONSO_SIMBOX WHERE event_date='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,11 +33,11 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM AGG.SPARK_FT_A_RAF_SUBSCRIPTION_DD WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT * FROM MON.SEVERAL_SUBSCRIPTIONS WHERE EVENT_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.FT_A_SUBSCRIPTION_DD_TMP"
-flux.sqoop.export-rdms.dest-table = "MON.FT_A_RAF_SUBSCRIPTION_DD"
-flux.sqoop.export-hive.staging-table = "TMP_FT_A_SUBSCRIPTION_DD"
+flux.sqoop.export-rdms.staging-table = "MON.SEVERAL_SUBSCRIPTIONS_TMP"
+flux.sqoop.export-rdms.dest-table = "MON.RAF_SEVERAL_SUBSCRIPTIONS"
+flux.sqoop.export-hive.staging-table = "TMP_SEVERAL_SUBSCRIPTIONS"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
