--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -740,3 +740,18 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+ crontasks +=
+   {
+     instanceId = "SQ_EXPORT_FT_RATING_GROUP",
+     cron = "0 13 */1 * * ?",
+     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-rating-group.conf",
+     taskType = "SQOOP",
+     taskQueue = "compute",
+     taskLauncher = ${SQOOP_LAUNCHER}
+     timeout = "240 minutes"
+     extraTaskParams : [
+       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+     ]
+   }
