--- a/PROD/CONF/OM/load-spark-it-om-services-charges.conf
+++ b/PROD/CONF/OM/load-spark-it-om-services-charges.conf
@@ -1,6 +1,24 @@
 flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
 
+
+flux.input-type = "HIVE" // Possible values are HDFS, HIVE
+flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
+
+flux.spark.setup-conf = []
+
+flux.setup-conf = []
+
+flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+
+
+flux.spark.setup-var +=  {"key": "date_offset","value": 7}
+flux.spark.setup-var +=  {"key": "cdr_type","value": "OMNY_BalanceChannelUsers"}
+flux.spark.setup-var +=  {"key": "file_date_index","value": -12}
+flux.spark.setup-var +=  {"key": "tt_table_name","value": "CDR.TT_OMNY_TRANSACTIONS"}
+
+
 flux.name = "LOAD_SPARK_IT_OMNY_SERVICES_CHARGES"
 
 flux.has-date-processing = false
@@ -19,16 +37,11 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.exec-query.execution.mode = "JDBC"
+
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_spark_it_om_services_charges.hql"
-//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-flux.hive.extra-conf += "--hivevar date_offset=7"
-flux.hive.extra-conf += "--hivevar cdr_type=OM_SERVICES_CHARGES"
-flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_OMNY_SERVICES_CHARGES"
