--- a/PROD/CONF/OM/load-spark-it-validation-cgu-ussd.conf
+++ b/PROD/CONF/OM/load-spark-it-validation-cgu-ussd.conf
@@ -19,11 +19,11 @@ flux.spark.setup-conf += {"key": "hive.enforce.sorting", "value": "false"}
 
 flux.hdfs.move-to-tt = true
 flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CGU/RAPPORT_CGU_USSD_AU*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/RAW/CGU/"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CGU/"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/RAW/CGU/*"
-flux.hdfs.dest.arch-dir = "/PROD/RAW/CGU"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/CGU/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/CGU"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
