--- a/PROD/CONF/OM/load-spark-it-om-all-users.conf
+++ b/PROD/CONF/OM/load-spark-it-om-all-users.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "collect"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_SPARK_IT_ALL_USERS"
+flux.name = "LOAD_SPARK_IT_OM_ALL_USERS"
 
 flux.input-type = "HIVE"
 flux.output-type = "HIVE"
