--- a/PROD/CONF/FT_POST_DATA_DA_USAGE_DAY/load-spark-ft-post-data-da-usage-day.conf
+++ b/PROD/CONF/FT_POST_DATA_DA_USAGE_DAY/load-spark-ft-post-data-da-usage-day.conf
@@ -31,7 +31,7 @@ select  if(count(*)=7,'OK','NOK')
 
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from MON.SPARK_FT_IMEI_TRANSACTION where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct session_date from MON.SPARK_FT_POST_DATA_DA_USAGE_DAY where session_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -39,7 +39,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from MON.SPARK_FT_IMEI_TRANSACTION where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct session_date from MON.SPARK_FT_POST_DATA_DA_USAGE_DAY where session_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
@@ -48,26 +48,18 @@ flux.has-exec-queries = true
 flux.has-post-queries = true
 
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_TRANSACTION/prequery_spark_ft_imei_transaction.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_POST_DATA_DA_USAGE_DAY/prequery_spark_ft_post_data_da_usage_day.hql"
 
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_1"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_2"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_3"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_4"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_POST_DATA_DA_USAGE_DAY"
 
 
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_TRANSACTION/insert_into_spark_ft_imei_transaction1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_TRANSACTION/insert_into_spark_ft_imei_transaction2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_TRANSACTION/insert_into_spark_ft_imei_transaction3_1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_TRANSACTION/insert_into_spark_ft_imei_transaction3_2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/FT_IMEI_TRANSACTION/insert_into_spark_ft_imei_transaction4.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_POST_DATA_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_data_da_usage_day_1.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_POST_DATA_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_data_da_usage_day_2.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_POST_DATA_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_data_da_usage_day_3.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_POST_DATA_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_data_da_usage_day_4.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/FT_POST_DATA_DA_USAGE_DAY/compute_and_insert_into_spark_ft_post_data_da_usage_day_final.hql"
 
 
-
-
-flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_1"
-flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_2"
-flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_3"
-flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_4"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.TT_POST_DATA_DA_USAGE_DAY"
 
 
