--- a/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-cell-360.conf
+++ b/PROD/CONF/IN_ZTE/FT/SITE_360/load-spark-ft-cell-360.conf
@@ -16,26 +16,26 @@ flux.name = "LOAD_SPARK_FT_CELL_360"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-begin-value = -180
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=7,'OK','NOK')
-
+select
+    if(count(*)=180,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from mon.spark_ft_cell_360 where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 180) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from mon.spark_ft_cell_360 where event_date between date_sub(current_date, 180) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from mon.spark_ft_cell_360 where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 180) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from mon.spark_ft_cell_360 where event_date between date_sub(current_date, 180) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
