--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ AlfredDev
 PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/test_compute_and_insert_into_ft_subscription.hql
 PROD/PLAY-GROUND
 PLAYGROUND
+hs_err_pid15660.log
