--- a/PROD/CONF/SPOOL/load-spark-tt-analyse-decon-refill1.conf
+++ b/PROD/CONF/SPOOL/load-spark-tt-analyse-decon-refill1.conf
@@ -32,7 +32,7 @@ where datecode between date_sub(current_date, 18) and date_sub(current_date, 1)
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
-    date_format(datecode,'yyyy-MM')
+    date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 18) and date_sub(current_date, 1)
     and datecode in (select distinct ACCOUNT_ACTIVITY_EVENT_DATE from MON.SPARK_TT_ANALYSE_DECON_REFILL1 where ACCOUNT_ACTIVITY_EVENT_DATE between date_sub(current_date, 18) and date_sub(current_date, 1))
